@@ -4,14 +4,12 @@ import static seedu.address.commons.core.Messages.MESSAGE_INVALID_COMMAND_FORMAT
 import static seedu.address.logic.parser.CommandParserTestUtil.assertParseFailure;
 import static seedu.address.logic.parser.CommandParserTestUtil.assertParseSuccess;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
-import seedu.address.logic.commands.FindCommand;
 import seedu.address.logic.commands.FindMeetingCommand;
 import seedu.address.model.meeting.MeetingContainsNamesPredicate;
-import seedu.address.model.person.NameContainsKeywordsPredicate;
 
 public class FindMeetingCommandParserTest {
 
@@ -31,14 +29,15 @@ public class FindMeetingCommandParserTest {
     }
 
     @Test
-    public void parse_validArgs_returnsFindCommand() {
+    public void parse_validArgs_returnsFindMeetingCommand() {
         // no leading and trailing whitespaces
-        FindCommand expectedFindCommand =
-            new FindCommand(new NameContainsKeywordsPredicate(Arrays.asList("Alice", "Bob")));
-        assertParseSuccess(parser, "Alice Bob", expectedFindCommand);
+        FindMeetingCommand expectedFindMeetingCommand = new FindMeetingCommand(
+                new MeetingContainsNamesPredicate(List.of("Alice", "Bob")));
+
+        assertParseSuccess(parser, "Alice Bob", expectedFindMeetingCommand);
 
         // multiple whitespaces between keywords
-        assertParseSuccess(parser, " \n Alice \n \t Bob  \t", expectedFindCommand);
+        assertParseSuccess(parser, " \n Alice \n \t Bob  \t", expectedFindMeetingCommand);
     }
 
 }
